--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,26 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  scrollbar-color: gray transparent;
+    scrollbar-width: thin;
+}
+
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-    background-color: #242424;
+  background-color: #242424;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+label {
+  color: #eeeeee;
+  margin-right: 1rem;
 }
 
 button {
@@ -42,17 +52,4 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
