--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ label {
   margin-right: 1rem;
 }
 
+input {
+  padding: 0.3rem 0.5rem;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
